changed title and footer to eola art incubator, as well as in line in about page

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eola Arts Incubator</title>
+		<title>Eola Art Incubator</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Learn about the team that is behind Eola Arts Incubator">
@@ -86,7 +86,7 @@
 									<p>Ayenda is an organizations researcher, and an artist, who’s passionate about merging art and business. Ayenda is a native of the Bahamas, and has deep experience as an artist, having served on the production teams for several independent record labels in the greater Orlando area. He currently expresses his imagination through collaborative DJ sets, and through the live co-creation of hip-hop and house instrumentals with groups of self-organized participants.</p>
 									<p>Ayenda holds a doctorate in International Business from the University of Texas at Dallas, where he researched the economic and creative consequences of social networks for individuals and collectives. He also holds a M.S. in Statistical Computing, and a B.S. in Mathematics from the University of Central Florida.</p>
 									<p>He also studies novel business models for structuring generative and collaborative creative work. His interested lies primarily in accomplishing this using new technologies such as generative AI and, and old technologies such as dancing. His work appears or is forthcoming in the Academy of Management Review and the Academy of Management Best Paper Proceedings. (Curriculum Vitae).</p>
-									<p>Prior to serving as the president of Eola Art’s Incubator, Ayenda served as tenure-track faculty member at Virginia Tech’s Pamplin School of Business, where he taught strategic management and analytics. Ayenda is currently without a university home.</p>
+									<p>Prior to serving as the president of Eola Art Incubator, Ayenda served as tenure-track faculty member at Virginia Tech’s Pamplin School of Business, where he taught strategic management and analytics. Ayenda is currently without a university home.</p>
 								</div>
 							</div>
 
@@ -111,7 +111,7 @@
 								<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy;Eola Arts Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
+								<li>&copy;Eola Art Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 							</ul>
 						</div>
 					</footer>
