--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eola Arts Incubator</title>
+		<title>Eola Art Incubator</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="List of reseach that was done in conjunction with Eola Arts Incubator">
@@ -101,7 +101,7 @@
 											<header class="major">
 												<h3>AI & Generative Music Industry Report and Business Analysis 2023</h3>
 											</header>
-											<p>Author: Consulting Group at Virginia Tech (at the request of Eola Arts Incubator)</p>
+											<p>Author: Consulting Group at Virginia Tech (at the request of Eola Art Incubator)</p>
 											<ul class="actions">
 												<li><a href="research-ai-and-generative-music-industry.html" class="button">Learn more</a></li>
 												<li><a href="./assets/pdf/CGVT-x-Eola-Arts-Final-Report.pdf" download target="_blank" class="button">Download Now</a></li>
@@ -169,7 +169,7 @@
 							<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy;Eola Arts Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
+							<li>&copy;Eola Art Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 						</ul>
 					</div>
 				</footer>
