--- a/class-digital-venturing-through-AI.html
+++ b/class-digital-venturing-through-AI.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eola Arts Incubator</title>
+		<title>Eola Art Incubator</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Class by Eola Arts to identify and analyze a market opportunity that uses generative AI in its core capabilities.">
@@ -181,7 +181,7 @@
 						<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy;Eola Arts Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
+						<li>&copy;Eola Art Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 					</ul>
 				</div>
 			</footer>
