--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eola Arts Incubator</title>
+		<title>Eola Art Incubator</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Eola Arts Incubator offers classes and workshops to implement AI art in your business">
@@ -53,10 +53,10 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Eola Arts Incubator</h1>
+								<h1>Eola Art Incubator</h1>
 							</header>
 							<div class="content">
-								<p>Eola Arts Incubator is a co-learning community at the intersection of business and technology. We conduct original research to examine how generative technologies impact organizations and markets.</p>
+								<p>Eola Art Incubator is a co-learning community at the intersection of business and technology. We conduct original research to examine how generative technologies impact organizations and markets.</p>
 								<p>We focus on understanding how both entrepreneurs and existing organizations can leverage technologies such as generative AI, blockchain, VR, and APIs to create and capture value for their primary stakeholders.</p>
 								
 								<ul class="actions">
@@ -155,7 +155,7 @@
 								<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy;Eola Arts Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
+								<li>&copy;Eola Art Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 							</ul>
 						</div>
 					</footer>
