--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 								<h1>Eola Art Incubator</h1>
 							</header>
 							<div class="content">
-								<p>Eola Art Incubator is a co-learning community at the intersection of business and technology. We conduct original research to examine how generative technologies impact organizations and markets.</p>
-								<p>We focus on understanding how both entrepreneurs and existing organizations can leverage technologies such as generative AI, blockchain, VR, and APIs to create and capture value for their primary stakeholders.</p>
+								<p>Eola Art Incubator is a co-learning community and organizational research lab at the intersection of business and technology. We conduct original research to examine how intelligent technologies impact organizations and markets.</p>
+								<p>We focus on understanding how both entrepreneurs and existing organizations can leverage technologies such as artificial intelligence and blockchain to create and capture value for their primary stakeholders.</p>
 								
 								<ul class="actions">
 									<li><a href="./contact.html" class="button scrolly">Contact Us</a></li>
