--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Eola Art Incubator</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Eola Arts Incubator offers classes and workshops to implement AI art in your business">
+		<meta name="description" content="Eola AI conducts research and workshops to understand the evolving role of intelligent algorithms in organizations.">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +27,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Eola Art Incubator</strong> 
+						<a href="index.html" class="logo"><strong>Eola AI</strong> 
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -53,10 +53,10 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Eola Art Incubator</h1>
+								<h1>Eola AI</h1>
 							</header>
 							<div class="content">
-								<p>Eola Art Incubator is a co-learning community and organizational research lab at the intersection of business and technology. We conduct original research to examine how intelligent technologies impact organizations and markets.</p>
+								<p>Eola AI is a co-learning community and organizational research lab at the intersection of business and technology. We conduct original research to examine how intelligent technologies impact organizations and markets.</p>
 								<p>We focus on understanding how both entrepreneurs and existing organizations can leverage technologies such as artificial intelligence and blockchain to create and capture value for their primary stakeholders.</p>
 								
 								<ul class="actions">
@@ -97,7 +97,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="about.html" class="link">About Us</a></h3>
-										<p>Meet the minds behind Eola Art Incubator</p>
+										<p> Learn more about Eola AI</p>
 									</header>
 								</article>
 								<article>
