--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eola Art Incubator</title>
+		<title>Eola AI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Eola AI conducts research and workshops to understand the evolving role of intelligent algorithms in organizations.">
