--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 								<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy;Eola Art Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
+								<li>&copy;Eola AI</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 							</ul>
 						</div>
 					</footer>
