--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Eola Art Incubator</title>
+		<title>Eola AI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Learn about the team that is behind Eola Arts Incubator">
+		<meta name="description" content="Learn about behind Eola AI">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +31,7 @@
 					<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 				<header id="header" class="alt style2">
-					<a href="index.html" class="logo"><strong>Eola Art Incubator</strong></a>
+					<a href="index.html" class="logo"><strong>Eola AI</strong></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -64,7 +64,7 @@
 								<h1>About Us</h1>
 							</header>
 							<div class="content">
-								<p>We examine the technology-organization interface in the context of artful organizing and art markets. These contexts demand that people creatively transform their cognitive, material, social resources in the face of increasingly competitive market forces. These dynamics unfold across the individual, team, organization, and levels. So art offers as a rich context as any other for examining the broader consequences of these generative technologies</p>
+								<p>We examine the technology-organization interface in the context of rapidly evolving firms and markets. These contexts give us the best opportunity to understand broader the consequences of intelligent technologies for organizational and effectiveness </p>
 							</div>
 						</div>
 					</section>
@@ -80,13 +80,13 @@
 								</div>
 								<header class="major center">
 									<h2>Ayenda Kemp, PhD</h2>
-									<span>President / Research Lead / Artist in Residence</span>
+									<span>Founder / Research Lead </span>
 								</header>
 								<div class="center">
-									<p>Ayenda is an organizations researcher, and an artist, who’s passionate about merging art and business. Ayenda is a native of the Bahamas, and has deep experience as an artist, having served on the production teams for several independent record labels in the greater Orlando area. He currently expresses his imagination through collaborative DJ sets, and through the live co-creation of hip-hop and house instrumentals with groups of self-organized participants.</p>
-									<p>Ayenda holds a doctorate in International Business from the University of Texas at Dallas, where he researched the economic and creative consequences of social networks for individuals and collectives. He also holds a M.S. in Statistical Computing, and a B.S. in Mathematics from the University of Central Florida.</p>
-									<p>He also studies novel business models for structuring generative and collaborative creative work. His interested lies primarily in accomplishing this using new technologies such as generative AI and, and old technologies such as dancing. His work appears or is forthcoming in the Academy of Management Review and the Academy of Management Best Paper Proceedings. (Curriculum Vitae).</p>
-									<p>Prior to serving as the president of Eola Art Incubator, Ayenda served as tenure-track faculty member at Virginia Tech’s Pamplin School of Business, where he taught strategic management and analytics. Ayenda is currently without a university home.</p>
+									<p>Ayenda is an organizational researcher. He is interested in understanding how technology facilitates novel modes of organizing collective production in firms and markets.</p>
+									<p>Ayenda holds a doctorate in Organizational Theory from the University of Texas at Dallas, where he used computer simulations to study how firms leverage social networks to develop new expertise at the individual level and new capabilities at the organizational level. He also holds an M.S. in Statistical Computing, and a B.S. in Mathematics from the University of Central Florida.</p>
+									<p>Ayenda's current work focuses on discovering and capturing opportunities in markets and firms using new technologies such as blockchain and generative AI. His work appears or is forthcoming in the Academy of Management Review and the Academy of Management Best Paper Proceedings. (Curriculum Vitae).</p>
+									<p> Before serving as the president of Eola Art Incubator, Ayenda served as a tenure-track faculty member at Virginia Tech’s Pamplin School of Business, where he taught strategic management and analytics. Ayenda is currently without a university home.</p>
 								</div>
 							</div>
 
@@ -106,12 +106,12 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/company/eola-arts-incubator/" class="icon brands alt fa-linkedin-in" aria-label="LinkedIn"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/company/eola-arts-incubator/" class="icon brands alt fa-LinkedIn-in" aria-label="LinkedIn"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://discord.gg/BFSyxK6ZHb" class="icon brands alt fa-discord"><span class="label" aria-label="Discord">Discord</span></a></li>
 								<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy;Eola Art Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
+								<li>&copy;Eola AI</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 							</ul>
 						</div>
 					</footer>
