--- a/class-digital-venturing-through-AI.html
+++ b/class-digital-venturing-through-AI.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Eola Art Incubator</title>
+		<title>Eola AI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Class by Eola Arts to identify and analyze a market opportunity that uses generative AI in its core capabilities.">
+		<meta name="description" content="Class by Eola AI to identify and analyze a market opportunity that uses artificial intelligence in its core capabilities.">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,13 +40,14 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="classes.html">Classes</a></li>
 						<li><a href="workshops.html">Workshops and Seminars</a></li>
-						<li><a href="about.html">About Us</a></li>
 						<li><a href="research.html">Research</a></li>
+						<li><a href="about.html">About Us</a></li>
+						
 						
 					</ul>
 					<ul class="actions stacked">
-						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
-						<li><a href="./contact.html" class="button primary fit">Contact Us</a></li>
+						<!--<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>  -->
+						 <li><a href="./contact.html" class="button primary fit">Contact Us</a></li>
 					</ul>
 				</nav>
 
@@ -58,12 +59,12 @@
 								<img src="images/pic01.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Digital Venturing with Generative AI</h1>
+								<h1>Venturing with Artificial Intelligence</h1>
 							</header>
 							<div class="content">
-								<p> The course asks students to identify and analyze a market opportunity that uses generative AI in its core capabilities. Here generative AI must constitute a core part to stakeholders. Each module of the course represents a stage in the strategizing process. But the modules may implemented iteratively through unique sequences, as each project demands.
+								<p> The course asks students to identify and analyze a market opportunity that uses artificial intelligence in its core capabilities. Here, artifiicartificialal intelligence must constitute a core part to the value proposition stakeholders. Each module of the course represents a stage in the strategizing process. But the modules may be implemented iteratively through unique sequences, as each project demands.
 
-									The instructor “teaches” by guiding students as they iterate through the seven modules. The final deliverable for the course is a business plan and (or) a business pitch explaining the outcomes of the analysis.</p>
+									The instructor guides students as they iterate through the seven modules. The final deliverable for the course is a business plan and (or) a business pitch explaining the outcomes of the analysis.</p>
 								<ul class="actions">
 									<li><a href="sign-up.html" class="button primary">Sign Up Now</a></li>
 								</ul>
@@ -80,15 +81,14 @@
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
-									<li>The all digital entrepreneur</li>
-									<li>The all venturing via startup</li>
+									<li>Digital venturing via startup</li>
 									<li>Digital venturing within firms</li>
 								</ul>
 							</div>
 
 							<div class="module inner">
 								<header class="minor">
-									<h2>Module 2: Finding a market and Assessing Advantages</h2>
+									<h2>Module 2: Finding a Marketet and Assessing Advantages</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
@@ -134,25 +134,6 @@
 								</ul>
 							</div>
 
-							<div class="module inner">
-								<header class="minor">
-									<h2>Module 6: Choosing a Situating Strategy</h2>
-								</header>
-								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
-								<ul class="alt">
-									<li>Grounding</li>
-									<li>Bounding</li>
-									<li>Recasting</li>
-								</ul>
-							</div>
-
-							<div class="module inner">
-								<header class="minor">
-									<h2>Module 7: Executing your Situating Strategy</h2>
-								</header>
-								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
-							</div>
-
 
 							<div class="module inner">
 								<ul class=" alt">
@@ -181,7 +162,7 @@
 						<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy;Eola Art Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
+						<li>&copy;Eola AI</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 					</ul>
 				</div>
 			</footer>
