--- a/class-decentralized-cooperation-and-coordination.html
+++ b/class-decentralized-cooperation-and-coordination.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Eola Art Incubator</title>
+		<title>Eola AI</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="A class by Eola Arts Incubator to learn about cooperation and coordination in organizations">
+		<meta name="viewport" content="width=detechnology-mediatedvice-width, initial-scale=1" />
+		<meta name="description" content="This class uses the DAO form of organizing to explore the broader theme of technology mediated cooperation and coordination in organizations">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 				<header id="header" class="alt style2">
-					<a href="index.html" class="logo"><strong>Eola Art Incubator</strong></a>
+					<a href="index.html" class="logo"><strong>Eola AI</strong></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -38,14 +38,15 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
+						<li><a href="research.html">Research</a></li>
 						<li><a href="classes.html">Classes</a></li>
 						<li><a href="workshops.html">Workshops and Seminars</a></li>
 						<li><a href="about.html">About Us</a></li>
-						<li><a href="research.html">Research</a></li>
+						
 						
 					</ul>
 					<ul class="actions stacked">
-						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
+						<!-- <li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li> -->
 						<li><a href="./contact.html" class="button primary fit">Contact Us</a></li>
 					</ul>
 				</nav>
@@ -61,7 +62,7 @@
 								<h1>Decentralized Cooperation and Coordination</h1>
 							</header>
 							<div class="content">
-								<p>Organizations are technologies for solving cooperation problems (getting people with divergent interest to agree) and coordination problems (getting specialists across thought worlds to combine their inputs effectively).</p>
+								<p>Organizations are technologies for solving cooperation problems (getting people with divergent interests to agree) and coordination problems (getting specialists across thought worlds to combine their inputs effectively).</p>
 								<ul class="actions">
 									<li><a href="sign-up.html" class="button primary">Sign Up Now</a></li>
 								</ul>
@@ -150,7 +151,7 @@
 						<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy;Eola Art Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
+						<li>&copy;Eola AI</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 					</ul>
 				</div>
 			</footer>
