--- a/classes.html
+++ b/classes.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Eola Art Incubator</title>
+		<title>Eola AI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="List of classes offered by Eola Arts Incubator">
+		<meta name="description" content="List of classes offered by Eola AI">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Eola Art Incubator</strong></a>
+						<a href="index.html" class="logo"><strong>Eola AI</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -38,14 +38,14 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
+						<li><a href="research.html">Research</a></li>
 						<li><a href="classes.html">Classes</a></li>
 						<li><a href="workshops.html">Workshops and Seminars</a></li>
 						<li><a href="about.html">About Us</a></li>
-						<li><a href="research.html">Research</a></li>
 						
 					</ul>
 					<ul class="actions stacked">
-						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
+					<!-- 	<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li> -->
 						<li><a href="./contact.html" class="button primary fit">Contact Us</a></li>
 					</ul>
 				</nav>
@@ -62,7 +62,7 @@
 								<h1>Classes</h1>
 							</header>
 							<div class="content">
-								<p>Expand your knowledge with courses that prepare you for real world situations and solutions using generative AI</p>
+								<p>Expand your knowledge with courses that prepare you to understand the new role of intelligent technologies in organizations.</p>
 							</div>
 						</div>
 					</section>
@@ -78,9 +78,9 @@
 									<div class="content classes">
 										<div class="inner">
 											<header class="major">
-												<h3>Digital Venturing through Generative AI</h3>
+												<h3>Venturing with Artificial Intelligence</h3>
 											</header>
-											<p>This course uses a co-learning approach, through project-based instruction, to guide students through the the strategy formation process in the realm of generative AI.</p>
+											<p>This course uses a co-learning approach through project-based instruction to guide students through the strategy formation process in the realm of generative AI.</p>
 											<ul class="actions">
 												<li><a href="class-digital-venturing-through-AI.html" class="button">Learn more</a></li>
 												<li><a href="sign-up.html" class="button">Sign Up</a></li>
@@ -95,7 +95,7 @@
 											<header class="major">
 												<h3>Decentralized Cooperation and Coordination</h3>
 											</header>
-											<p>Organizations are technologies for solving cooperation problems (getting people with divergent interest to agree) and coordination problems (getting specialists across thought worlds to combine their inputs effectively).</p>
+											<p>Organizations are technologies for solving cooperation problems (getting people with divergent interests to agree) and coordination problems (getting specialists across thought worlds to combine their inputs effectively).</p>
 											<ul class="actions">
 												<li><a href="class-decentralized-cooperation-and-coordination.html" class="button">Learn more</a></li>
 												<li><a href="sign-up.html" class="button">Sign Up</a></li>
@@ -121,7 +121,7 @@
 							<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy;Eola Art Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
+							<li>&copy;Eola AI</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 						</ul>
 					</div>
 				</footer>
