--- a/classes.html
+++ b/classes.html
@@ -80,7 +80,7 @@
 											<header class="major">
 												<h3>Venturing with Artificial Intelligence</h3>
 											</header>
-											<p>This course uses a co-learning approach through project-based instruction to guide students through the strategy formation process in the realm of generative AI.</p>
+											<p>This course uses a co-learning approach to help participants strategize to identify and capture opportunities that use artificial intelligence as a core part of the value proposition.</p>
 											<ul class="actions">
 												<li><a href="class-digital-venturing-through-AI.html" class="button">Learn more</a></li>
 												<li><a href="sign-up.html" class="button">Sign Up</a></li>
@@ -95,7 +95,7 @@
 											<header class="major">
 												<h3>Decentralized Cooperation and Coordination</h3>
 											</header>
-											<p>Organizations are technologies for solving cooperation problems (getting people with divergent interests to agree) and coordination problems (getting specialists across thought worlds to combine their inputs effectively).</p>
+											<p>Organizations are technologies for solving cooperation problems and coordination problems. This introduces participants to DAOs (decentralized autonomous organizations) and uses that theme to explore broader ideas about advances in technology-mediated organizing </p>
 											<ul class="actions">
 												<li><a href="class-decentralized-cooperation-and-coordination.html" class="button">Learn more</a></li>
 												<li><a href="sign-up.html" class="button">Sign Up</a></li>
