--- a/classes.html
+++ b/classes.html
@@ -80,7 +80,7 @@
 											<header class="major">
 												<h3>Venturing with Artificial Intelligence</h3>
 											</header>
-											<p>This course uses a co-learning approach to help participants strategize to identify and capture opportunities that use artificial intelligence as a core part of the value proposition.</p>
+											<p>This course uses a co-learning approach to help participants develop strategies to identify and capture opportunities that leverage artificial intelligence as a core part of their value propositions.</p>
 											<ul class="actions">
 												<li><a href="class-digital-venturing-through-AI.html" class="button">Learn more</a></li>
 												<li><a href="sign-up.html" class="button">Sign Up</a></li>
