--- a/classes.html
+++ b/classes.html
@@ -95,7 +95,7 @@
 											<header class="major">
 												<h3>Decentralized Cooperation and Coordination</h3>
 											</header>
-											<p>Organizations are technologies for solving cooperation problems and coordination problems. This introduces participants to DAOs (decentralized autonomous organizations) and uses that theme to explore broader ideas about advances in technology-mediated organizing </p>
+											<p> This course introduces participants to DAOs (decentralized autonomous organizations) and uses that theme to explore broader ideas surrounding technological solutions for solving cooperation problems and coordination problems within and across organizations.</p>
 											<ul class="actions">
 												<li><a href="class-decentralized-cooperation-and-coordination.html" class="button">Learn more</a></li>
 												<li><a href="sign-up.html" class="button">Sign Up</a></li>
