--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eola Art Incubator</title>
+		<title>Eola AI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Sign up for class or workshop with Eola Arts Incubator">
@@ -27,7 +27,7 @@
 
 				<!-- Header -->
 				<header id="header" class="alt style2">
-					<a href="index.html" class="logo"><strong>Eola Art Incubator</strong></a>
+					<a href="index.html" class="logo"><strong>Eola AI</strong></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -37,14 +37,15 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
+						<li><a href="research.html">Research</a></li>
 						<li><a href="classes.html">Classes</a></li>
 						<li><a href="workshops.html">Workshops and Seminars</a></li>
 						<li><a href="about.html">About Us</a></li>
-						<li><a href="research.html">Research</a></li>
+						
 						
 					</ul>
 					<ul class="actions stacked">
-						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
+					<!--	<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>  -->
 						<li><a href="./contact.html" class="button primary fit">Contact Us</a></li>
 					</ul>
 				</nav>
