--- a/research-ai-and-generative-music-industry.html
+++ b/research-ai-and-generative-music-industry.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Eola Art Incubator</title>
+		<title>Eola AI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Reseach with Eola Arts Incubator relating to generative AI and music with Virginia Tech">
+		<meta name="description" content="Reseach with Eola AI relating to generative AI and music with Virginia Tech">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,13 +37,14 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">Research</a></li>
 							<li><a href="classes.html">Classes</a></li>
 							<li><a href="workshops.html">Workshops and Seminars</a></li>
-							<li><a href="about.html">Research</a></li>
+							
 							<li><a href="research.html">About Us</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
+							<!--<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li> -->
 							<li><a href="./contact.html" class="button primary fit">Contact Us</a></li>
 						</ul>
 					</nav>
@@ -60,7 +61,7 @@
 								</header>
 								<div class="center">
 									<span class="image"><img class="circle" src="images/virginia-tech" alt="" /></span>
-									<p>Music is at the forefront of research in generative AI. These developments may lower barriers to entry for artists and art entrepreneurs, and offer new opportunities for people to make money from their passions.</p>
+									<p>Art is at the forefront of research in generative AI. These developments may lower barriers to entry for artists and art entrepreneurs, and offer new opportunities for people to make money from their passions.</p>
 									<p>This idea lead us to initiate a generative music project with the Consulting Group at Virginia Tech. The group investigated new advances in generative music. The market research surveys the technology used to create generative music and offers as examples a few business models used to deploy generative music to the market.</p>
 									<p>The paper lays out potential model specifications and the expected computing costs associated with the recommended project.</p>
 									<p>We encourage readers to critique and extend the work. Please let us know if you find this information useful, or if you need help building something!</p>
