--- a/research.html
+++ b/research.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Eola Art Incubator</title>
+		<title>Eola AI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="List of reseach that was done in conjunction with Eola Arts Incubator">
+		<meta name="description" content="List of reseach that was done in conjunction with Eola AI">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,14 +38,15 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
+						<li><a href="research.html">Research</a></li>
 						<li><a href="classes.html">Classes</a></li>
 						<li><a href="workshops.html">Workshops and Seminars</a></li>
 						<li><a href="about.html">About Us</a></li>
-						<li><a href="research.html">Research</a></li>
+						
 						
 					</ul>
 					<ul class="actions stacked">
-						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
+					<!--	<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li> -->
 						<li><a href="./contact.html" class="button primary fit">Contact Us</a></li>
 					</ul>
 				</nav>
@@ -86,7 +87,7 @@
 									<div class="content classes">
 										<div class="inner">
 											<header class="major">
-												<h3>Kemp. A. 2023. “Competitive Advantage from Artificial Intelligence: Toward a Theory of Situated AI.” Academy of Management Review.**</h3>
+												<h3>Kemp. A. 2023. “Competitive Advantage through Artificial Intelligence: Toward a Theory of Situated AI.” Academy of Management Review.**</h3>
 											</header>
 											<p>Author: Ayenda Kemp</p>
 											<ul class="actions">
@@ -126,7 +127,7 @@
 							<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy;Eola Art Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
+							<li>&copy;Eola AI</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 						</ul>
 					</div>
 				</footer>
