--- a/sign-up.html
+++ b/sign-up.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eola Art Incubator</title>
+		<title>Eola AI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Sign up for class or workshop with Eola Arts Incubator">
@@ -27,7 +27,7 @@
 
 				<!-- Header -->
 				<header id="header" class="alt style2">
-					<a href="index.html" class="logo"><strong>Eola Art Incubator</strong></a>
+					<a href="index.html" class="logo"><strong>Eola AI</strong></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
@@ -37,14 +37,15 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
+						<li><a href="research.html">Research</a></li>
 						<li><a href="classes.html">Classes</a></li>
 						<li><a href="workshops.html">Workshops and Seminars</a></li>
 						<li><a href="about.html">About Us</a></li>
-						<li><a href="research.html">Research</a></li>
+						
 						
 					</ul>
 					<ul class="actions stacked">
-						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
+						<!--<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li> -->
 						<li><a href="./contact.html" class="button primary fit">Contact Us</a></li>
 					</ul>
 				</nav>
@@ -69,11 +70,10 @@
 										<div class="col-12">
 											<select name="classSelect" id="classSelect" required>
 												<option value="">- Select a class/workshop -</option>
-												<option value="Class: Digital Venturing through Generative AI">Class: Digital Venturing through Generative AI</option>
-												<option value="Class: What’s new about DAOS">Class: What’s new about DAOS</option>
+												<option value="Class: Venturing with Artificial Intelligence">Class: Venturing with Artificial Intelligence</option>
 												<option value="Class: Decentralized Cooperation and Coordination">Class: Decentralized Cooperation and Coordination</option>
-												<option value="Workshop: Managing (with) Intelligent Algorithms: Summer Workshop">Workshop: Managing (with) Intelligent Algorithms: Summer Workshop</option>
-												<option value="Workshop: Fall 2023 Monthly Speaker Series: Artificial Intelligence in and Around Organizations">Workshop: Fall 2023 Monthly Speaker Series: Artificial Intelligence in and Around Organizations</option>
+												<option value="Summer Workshop: Managing (with) Intelligent Algorithms">Summer Workshop: Managing (with) Intelligent Algorithms</option>
+												<option value="Fall 2023 Monthly Speaker Series: Artificial Intelligence in and Around Organizations">Fall 2023 Monthly Speaker Series: Artificial Intelligence in and Around Organizations</option>
 											</select>
 										</div>
 										<!-- Break -->
@@ -124,7 +124,7 @@
 								<li><a href="mailto: ayenda@eolaarts.com" class="icon alt fa-envelope"><span class="label" aria-label="Email">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy;Eola Art Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
+								<li>&copy;Eola AI</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 							</ul>
 						</div>
 					</footer>
